# beryl

./: .gitignore  Dockerfile  Makefile  Pipfile  README.md  beryl.js  beryl.py  docker-compose-example.yml  mmmm_a_thicccyyy.json  penis_pleasure_18.json  pyproject.toml
.github/workflows/: codeql.yml  dependency-review.yml
Alpine-Docker/: Dockerfile  start.sh
Bot/: beryl.py  databaseInit.py  test.py
Bot/Cogs/: disquest.py  edictHelp.py  event_tasks.py  events.py  fun-stuff.py  tasks.py  useful-things.py  xp.py
Bot/beryl_events_utils/: __init__.py  events_utils.py
Scripts/: databaseInit.py
